# gitgobig

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  paths.rs  persistence.rs
crates/core/: Cargo.toml
crates/core/src/: git.rs  lib.rs  types.rs
crates/gows/: Cargo.toml
crates/gows/src/: app.rs  main.rs  message.rs  style.rs  update.rs  view.rs
crates/gows/src/graph/: canvas.rs  layout.rs  mod.rs
crates/gows/src/views/: branches.rs  mod.rs  modals.rs  search.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  async_git.rs  main.rs  message.rs  update.rs  view.rs
