[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/gui",
    "crates/config",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
iced = "0.14"
rfd = "0.17"
opener = "0.7"

# Internal crates
gitgobig-core = { path = "crates/core" }
gitgobig-config = { path = "crates/config" }
