[package]
name = "gitgobig-gui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
iced = { workspace = true, features = ["tokio"] }
rfd.workspace = true
opener.workspace = true
gitgobig-core.workspace = true
gitgobig-config.workspace = true
